Fixed login button visibility in light mode

--- a/static/css/light_mode.css
+++ b/static/css/light_mode.css
@@ -137,3 +137,14 @@ body.light-mode .navbar .btn-logout {
     border: none !important;
     color: white !important;
 }
+
+body.light-mode .btn-outline-light {
+    color: black !important;
+    border: 1px solid black !important;
+    background: white !important;
+}
+
+body.light-mode .btn-outline-light:hover {
+    background: black !important;
+    color: white !important;
+}
